# AI-ChatBot

./: .env.example  .gitignore  :memory  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: tests.yml
src/ai_chatbot.egg-info/: PKG-INFO  SOURCES.txt
src/authentication/: auth.py
src/backend/: main.py
src/backend/api/router/: v1.py
src/backend/api/schemas/: pydantic_schemas.py
src/backend/authentication/: auth.py  passwords.py
src/backend/chat_bot/: client.py
src/backend/configuration/: logging_config.py  settings.py
src/backend/database/: chat_repository.py  db.py  models.py  repository.py  user_repository.py
src/backend/dependencies/: depends.py
src/backend/exceptions/: exc.py  handlers.py
src/backend/middleware/: logging_middleware.py  request_id_middleware.py
src/backend/service/: chat_service.py  user_service.py
src/frontend/: chatbot_page.py  main.py
src/frontend/pages/: chatbot_page.py  login_page.py  register_page.py
tests/: conftest.py  test_api_chat.py  test_api_chat_history.py  test_api_create_conversation.py  test_api_healt.py  test_create_user.py  test_get_conversations_ids.py  test_repository.py
