[project]
name = "ai-chatbot"
version = "0.1.0"
description = "This is local AI chatbot with FastAPI backend, Streamlit UI, DB persistance and Ollama"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.1",
    "pyjwt>=2.13.0",
    "pytest>=9.0.3",
    "python-multipart>=0.0.32",
    "ruff>=0.15.11",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
